# pond

./: .gitignore  LICENSE.txt  README.rst  autogen.sh  meson.build  meson_options.txt
.github/workflows/: build.yml
bash-completion/: cm4all-pond-client
debian/: .gitignore  changelog  cm4all-pond-client.install  cm4all-pond-doc.docs  cm4all-pond.dirs  cm4all-pond.install  cm4all-pond.postinst  cm4all-pond.service  cm4all-pond.sysusers  control  pond.conf  rules
doc/: conf.py  index.rst  meson.build
src/: AnyList.cxx  AnyList.hxx  AppendListener.hxx  AutoClone.cxx  AutoClone.hxx  BlockingOperation.hxx  Client.cxx  Clone.cxx  CommandLine.cxx  CommandLine.hxx  Config.cxx  Config.hxx  Connection.cxx  Connection.hxx  Cursor.cxx  Cursor.hxx  Database.cxx  Database.hxx  DefaultFifoBuffer.hxx  Error.hxx  FCursor.cxx  FCursor.hxx  Filter.cxx  Filter.hxx  FullRecordList.cxx  FullRecordList.hxx  Instance.cxx  Instance.hxx  LightCursor.cxx  LightCursor.hxx  List.hxx  Listener.cxx  Listener.hxx  Main.cxx  Port.hxx  Protocol.hxx  RList.cxx  RList.hxx  RSkipDeque.cxx  RSkipDeque.hxx  (+10 more)
src/client/: Async.cxx  Async.hxx  CachedAddressResolver.cxx  CachedAddressResolver.hxx  Client.cxx  Client.hxx  Datagram.hxx  FormatJson.cxx  FormatJson.hxx  JsonWriter.hxx  Main.cxx  Open.cxx  Open.hxx  PerSitePath.cxx  PerSitePath.hxx  ResultWriter.cxx  ResultWriter.hxx  Send.cxx  Send.hxx  SimpleAddressResolver.cxx  SimpleAddressResolver.hxx  VisitorTracker.cxx  VisitorTracker.hxx
src/system/: SetupProcess.cxx  SetupProcess.hxx
subprojects/: .gitignore
test/: TestDatabase.cxx  meson.build
